@@ -43,7 +43,7 @@ public class version {
     /**
      * compile day
      */
-    public final static int day = 7;
+    public final static int day = 8;
 
     /**
      * statement of release
